# randomize_vector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: galois_lfsr_rand_32.hpp  vector_randomizer.hpp
src/: CMakeLists.txt  galois_lfsr_rand_32.cpp  main.cpp  vector_randomizer.cpp
test/: CMakeLists.txt  galois_lfsr_rand_32_test.cpp  mock_galois_lsfr_rand_32.hpp  vector_randomizer_test.cpp
